Update slack_post.yml swap slack and channel tokens

--- a/.github/workflows/slack_post.yml
+++ b/.github/workflows/slack_post.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Run Slack script
         run: python slack_post.py
         env:
-          SLACK_TOKEN: ${{ secrets.SLACK_WEBSITE_TOKEN }}
-          CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+          CHANNEL_ID: ${{ secrets.CHANNEL_ID_WEBSITE }}
