--- a/.github/workflows/great-games-today.yml
+++ b/.github/workflows/great-games-today.yml
@@ -23,8 +23,14 @@ jobs:
         run: pip install requests
 
       - name: Run Slack script
-        run: python 206bikepolo/great_games_today.py
+        run: |
+          if [ "${{ github.event.schedule }}" = "00 21 * * 3" ]; then
+            export CHANNEL_ID="${{ secrets.CHANNEL_ID_NEWBIE }}"
+          else
+            export CHANNEL_ID="${{ secrets.CHANNEL_ID_PICKUP }}"
+          fi
+          python 206bikepolo/great_games_today.py
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          CHANNEL_ID: ${{ secrets.CHANNEL_ID_NEWBIE }}
+          #CHANNEL_ID: ${{ secrets.CHANNEL_ID_NEWBIE }}
           #CHANNEL_ID: ${{ secrets.CHANNEL_ID_WEBSITE }}
