Update byobg-invite-dm.yml - test pip install

--- a/.github/workflows/byobg-invite-dm.yml
+++ b/.github/workflows/byobg-invite-dm.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies via UV
         working-directory: ./discord/byobg  # <-- path to folder with pyproject.toml
-        run: uv install
+        run: uv pip install
 
       - name: Run bot
         working-directory: ./discord/byobg  # <-- same folder
