Update byobg-invite-dm.yml - try removing group in pip

--- a/.github/workflows/byobg-invite-dm.yml
+++ b/.github/workflows/byobg-invite-dm.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install dependencies via UV
         working-directory: ./discord/byobg  # <-- path to folder with pyproject.toml
-        run: uv pip install --group default
+        run: uv pip install
 
       - name: Run bot
         working-directory: ./discord/byobg  # <-- same folder
