--- a/.github/workflows/byobg-invite-dm.yml
+++ b/.github/workflows/byobg-invite-dm.yml
@@ -33,4 +33,5 @@ jobs:
         working-directory: ./discord/byobg  # <-- same folder
         env:
           BOT_TOKEN: ${{ secrets.BYOBG_BOT_TOKEN }}
+          TARGET_USER_ID: ${{ secrets.ABGUP_USER_ID }}
         run: uv run python dm-invite.py
