Update byobg-subscribe.yml - add cancel prior subscribe scripts

--- a/.github/workflows/byobg-subscribe.yml
+++ b/.github/workflows/byobg-subscribe.yml
@@ -1,5 +1,9 @@
 name: Run Discord Subscribe Bot
 
+concurrency:
+  group: subscribe-workflow
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ main ]
