--- a/.github/workflows/byobg-subscribe.yml
+++ b/.github/workflows/byobg-subscribe.yml
@@ -22,7 +22,9 @@ jobs:
       
     steps:
       - uses: actions/checkout@v3
-
+        with:
+          persist-credentials: true
+    
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
