--- a/.github/workflows/byobg-subscribe.yml
+++ b/.github/workflows/byobg-subscribe.yml
@@ -19,6 +19,7 @@ jobs:
     env:
       BOT_TOKEN: ${{ secrets.BYOBG_BOT_TOKEN }}
       TARGET_USER_ID: ${{ secrets.ABGUP_USER_ID }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
     steps:
       - uses: actions/checkout@v3
