--- a/.github/workflows/byobg-subscribe.yml
+++ b/.github/workflows/byobg-subscribe.yml
@@ -1,5 +1,8 @@
 name: Run Discord Subscribe Bot
 
+permissions:
+  contents: write  # allow pushing changes
+
 concurrency:
   group: subscribe-workflow
   cancel-in-progress: true
