--- a/.github/workflows/byobg-invite.yml
+++ b/.github/workflows/byobg-invite.yml
@@ -1,8 +1,8 @@
-name: Run Discord Bot
+name: Send BYOBG Invites
 
 on:
-  push:
-    branches: [ main ]
+  #push:
+    #branches: [ main ]
   workflow_dispatch:  # lets you manually trigger
 
 jobs:
