--- a/.github/workflows/byobg-subscribe.yml
+++ b/.github/workflows/byobg-subscribe.yml
@@ -8,8 +8,8 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  push:
-    branches: [ main ]
+  #push:
+    #branches: [ main ]
   workflow_dispatch:  # lets you manually trigger
 
 jobs:
