Update byobg_subscribe.yml - rerun every 5 hours

--- a/.github/workflows/byobg_subscribe.yml
+++ b/.github/workflows/byobg_subscribe.yml
@@ -10,6 +10,8 @@ concurrency:
 on:
   #push:
     #branches: [ main ]
+  schedule:
+    - cron: "0 */5 * * *"
   workflow_dispatch:  # lets you manually trigger
 
 jobs:
