--- a/.github/workflows/bp_great_games_today.yml
+++ b/.github/workflows/bp_great_games_today.yml
@@ -23,14 +23,9 @@ jobs:
         run: pip install requests
 
       - name: Run Slack script
-        run: |
-          if [ "${{ github.event.schedule }}" = "0 5 * * 4" ]; then
-            export CHANNEL_ID="${{ secrets.CHANNEL_ID_NEWBIE }}"
-          else
-            export CHANNEL_ID="${{ secrets.CHANNEL_ID_PICKUP }}"
-          fi
-          python 206bikepolo/great_games_today.py
+        run: python 206bikepolo/great_games_today.py
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+          CHANNEL_ID: ${{ github.event.schedule == '0 5 * * 4' && secrets.CHANNEL_ID_NEWBIE || secrets.CHANNEL_ID_PICKUP }}
           #CHANNEL_ID: ${{ secrets.CHANNEL_ID_NEWBIE }}
           #CHANNEL_ID: ${{ secrets.CHANNEL_ID_WEBSITE }}
