Update and rename dm-gamenight-invite.yaml to bp_gamenight_invite_dm.yaml & add uv install

--- a/.github/workflows/bp_gamenight_invite_dm.yaml
+++ b/.github/workflows/bp_gamenight_invite_dm.yaml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install UV 
+        run: pip install uv
+
       - name: Run Slack DM script
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
