--- a/.github/workflows/bp_gamenight_invite_dm.yaml
+++ b/.github/workflows/bp_gamenight_invite_dm.yaml
@@ -1,5 +1,4 @@
-name: Send Slack DM
-
+name: BP Gamenight Invite DM
 on:
   workflow_dispatch:
 
@@ -12,6 +11,9 @@ jobs:
 
       - name: Install UV 
         run: pip install uv
+
+      - name: Install dependencies
+        run: pip install .
 
       - name: Run Slack DM script
         env:
