Update bp_gamenight_invite_dm.yaml - add working directory

--- a/.github/workflows/bp_gamenight_invite_dm.yaml
+++ b/.github/workflows/bp_gamenight_invite_dm.yaml
@@ -5,6 +5,9 @@ on:
 jobs:
   send_dm:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: .slack/206bikepolo/
 
     steps:
       - uses: actions/checkout@v3
@@ -18,4 +21,4 @@ jobs:
       - name: Run Slack DM script
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        run: uv run python slack/206bikepolo/gamenight/github_invite_dm.py
+        run: uv run python gamenight/github_invite_dm.py
