Update bp_gamenight_invite_dm.yaml - remove dot in workign directory

--- a/.github/workflows/bp_gamenight_invite_dm.yaml
+++ b/.github/workflows/bp_gamenight_invite_dm.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: .slack/206bikepolo/
+        working-directory: slack/206bikepolo/
 
     steps:
       - uses: actions/checkout@v3
