--- a/.github/workflows/byobg_invite.yml
+++ b/.github/workflows/byobg_invite.yml
@@ -17,20 +17,13 @@ jobs:
       
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
           
       - name: Install UV 
         run: pip install uv
 
       - name: Install dependencies
-        run: uv pip install discord.py
+        run: pip install .
 
       - name: Run script
         run: uv run python invite.py
-
-
 
